[package]
name = "duh-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4.21"
env_logger = "0.11.3"
warp = "0.3.7"
bytes = "1.6.0"
http = "0.2.12"
pin-project-lite = "0.2.14"
